2005-10-13  Brent Smith  <gnome@nextreality.net>

	* src/yelp-settings.c: (yelp_settings_open_preferences):
	- Make the preferences dialog hide on the delete_event, fixes #318736

==================== 2.12.1 ====================

2005-09-17  Shaun McCance  <shaunm@gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.12.1

==================== 2.12.0 ====================

2005-09-10  Erdal Ronahi  <erdal.ronahi@gmail.com>
        * po/ku.po
        - Added Kurdish translation

2005-09-06  Shaun McCance  <shaunm@gnome.org>

	* NEWS:
	- Version 2.12.0

2005-08-29  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp-ui.xml:
	* src/yelp-window.c:
	- Enabled F7 keybinding, as per #157941

2005-08-24  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-xslt-pager.c:
	- Patch from Brent Smith to fix crasher, #310420

2005-08-24  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	- post-release bump to 2.12.0

==================== 2.11.92 ====================

2005-08-24  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.11.92

2005-08-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-toc-pager.c:
	* src/yelp-window.c:
	* src/yelp-xslt-pager.c:
	- Patch from Don Scorgie to fix crash, #172227

2005-07-25  Ross Burton  <ross@burtonini.com>

	* src/yelp-db-pager.c:
	Don't crash if a template isn't found when walking.

2005-07-25  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Initialize some variables, from Ross Burton, #311518

2005-07-13  Behdad Esfahbod  <gnome@behdad.org>

	* .cvsignore:
	- Added INSTALL.

	* src/yelp-settings.c (yelp_settings_init):
	- Fixed typo in character code in translator comment.
	  (Bug 310240, Roozbeh Pournader)

2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	Downgrade minimal mozilla version to 1.7 again, was accidentally
	not changed when copying the rest of the configure changes
	from Epiphany.

2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: