@@ -1,3 +1,7 @@
+2005-10-18  Frederic Crozat  <fcrozat@mandriva.com>
+
+	* src/Makefile.am: don't ship generated files.
+
 2005-10-13  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-settings.c: (yelp_settings_open_preferences):
